Python project structure

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ test/sdo-bioschemas-client.json
 /spec2model/mycreds.txt
 /spec2model/sdo-bioschemas-client.json
 /test/client_secrets.json
+/Templates.iml
+Templates.iml
+
