--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 spec2model/mycreds.txt
 spec2model/__pycache__/
 .idea/libraries/R_User_Library.xml
@@ -7,13 +6,15 @@ spec2model/__pycache__/
 .idea/vcs.xml
 .idea/workspace.xml
 spec2model/client_secrets.json
-spec2model/sdo-bioschemas-client.json
+spec2model/gh_creds.txt
 test/mycreds.txt
 test/sdo-bioschemas-client.json
 /.idea/
 /spec2model/mycreds.txt
-/spec2model/sdo-bioschemas-client.json
+/spec2model/client_secrets.json
 /test/client_secrets.json
 /Templates.iml
 Templates.iml
-
+/tests/client_secrets.json
+/client_secrets.json
+/credentials2.json
