--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ google-api-python-client==1.6.2
 gspread==0.6.2
 oauth2client==4.1.2
 PyDrive==1.3.1
+PyGithub==1.35
+Pygments==2.2.0
+PyJWT==1.5.3
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.18.1
