--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ PyDrive==1.3.1
 PyGithub==1.35
 Pygments==2.2.0
 PyJWT==1.5.3
+python-frontmatter==0.4.2
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.18.1
