Specifications submodule updated 14092017-1524

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ test/sdo-bioschemas-client.json
 /spec2model/mycreds.txt
 /spec2model/client_secrets.json
 /test/client_secrets.json
-/Templates.iml
-Templates.iml
 /tests/client_secrets.json
 /client_secrets.json
 /credentials2.json
+/map2model.iml
+/docs/specifications_md_files/old_md_files.zip
