md and html generation

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ test/sdo-bioschemas-client.json
 /credentials2.json
 /map2model.iml
 /docs/specifications_md_files/old_md_files.zip
+/docs/specifications_md_files/
