specifications not syncronized

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ spec2model/__pycache__/
 /docs/specifications_md_files/old_md_files.zip
 /docs/specifications_md_files/
 .DS_Store
+/docs/spec_files/
